# draw

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release-rust.yml
crates/draw-app/: Cargo.toml
crates/draw-app/src/: lib.rs
crates/draw-cli/: Cargo.toml
crates/draw-cli/src/: cli.rs  lib.rs  main.rs
crates/draw-core/: Cargo.toml
crates/draw-core/examples/: gallery.rs  hello.rs
crates/draw-core/src/: document.rs  element.rs  export_png.rs  export_svg.rs  geometry.rs  history.rs  lib.rs  point.rs  render.rs  storage.rs  style.rs
crates/draw-core/src/render/: draw.rs  hit_test.rs  mod.rs  path.rs  selection.rs
crates/draw-core/tests/: integration.rs
crates/draw-py/: Cargo.toml
crates/draw-py/src/: lib.rs
crates/draw-wasm/: Cargo.toml  build.sh
crates/draw-wasm/src/: lib.rs
crates/draw-webapp/: Cargo.toml  build.rs
crates/draw-webapp/frontend/: api.js  app.js  canvas.js  draw_wasm_bg.wasm  helpers.js  index.html  interactions.js  style.css  theme.js  wasm_glue.js
crates/draw-webapp/src/: api.rs  lib.rs
examples/: hello.py
examples/gallery/: README.md  flowchart.draw.json  patterns.draw.json  sketch.draw.json  sticky.draw.json  wireframe.draw.json
py/dkdc_draw/: __init__.py  core.pyi
tests/: test_core.py  test_draw.py  test_gallery_roundtrip.py
