[workspace]
resolver = "2"
members = [
    "crates/draw-core",
    "crates/draw-app",
    "crates/draw-webapp",
    "crates/draw-cli",
    "crates/draw-wasm",
]
default-members = [
    "crates/draw-core",
    "crates/draw-cli",
    "crates/draw-wasm",
]
exclude = ["crates/draw-py"]

[profile.release]
lto = true
strip = true
codegen-units = 1

# Surgical clippy opt-ins. We don't enable clippy::pedantic wholesale — the
# f32/f64 cast and must_use_candidate lints drown real signal. These are the
# specific lints that caught bugs or unclear intent during review.
[workspace.lints.clippy]
manual_let_else = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
redundant_closure_for_method_calls = "warn"
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
