[package]
name = "dkdc-draw"
version = "0.1.1"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
description = "Local-first drawing tool"
repository = "https://github.com/dkdc-io/draw"
homepage = "https://github.com/dkdc-io/draw"
license = "MIT"
readme = "../../README.md"
keywords = ["graphics", "drawing", "cli", "sketch"]
categories = ["graphics", "command-line-utilities"]

[lib]
name = "draw"
path = "src/lib.rs"

[[bin]]
name = "draw"
path = "src/main.rs"

[features]
app = ["dep:dkdc-draw-app"]
webapp = ["dep:dkdc-draw-webapp"]

[dependencies]
anyhow = "1"
dkdc-draw-core = { version = "0.1.1", path = "../draw-core" }
dkdc-draw-app = { version = "0.1.1", path = "../draw-app", optional = true }
dkdc-draw-webapp = { version = "0.1.1", path = "../draw-webapp", optional = true }
clap = { version = "4.5", features = ["derive"] }
