[workspace]

[package]
name = "draw-py"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
description = "PyO3 bindings for draw"
repository = "https://github.com/dkdc-io/draw"
homepage = "https://github.com/dkdc-io/draw"
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
dkdc-draw = { version = "0.1.0", path = "../draw-cli", features = ["webapp"] }
dkdc-draw-core = { version = "0.1.0", path = "../draw-core" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
serde_json = "1"
