[package]
name = "dkdc-draw-wasm"
version = "0.2.1"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
description = "WASM bindings for draw renderer"
repository = "https://github.com/dkdc-io/draw"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "draw_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
draw_core = { version = "0.2.1", path = "../draw-core", package = "dkdc-draw-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
