[package]
name = "dkdc-draw-webapp"
version = "0.3.0"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
description = "Webapp for draw (axum)"
repository = "https://github.com/dkdc-io/draw"
license = "MIT"
homepage = "https://github.com/dkdc-io/draw"
keywords = ["graphics", "drawing", "webapp"]
categories = ["graphics", "web-programming"]
include = ["src/**/*", "frontend/**/*", "Cargo.toml"]

[lib]
name = "draw_webapp"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
dkdc-draw-core = { version = "0.3.0", path = "../draw-core" }
axum = "0.8"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }

[lints]
workspace = true
